--- a/migrations/20240118000000_diagram.md
+++ b/migrations/20240118000000_diagram.md
@@ -41,7 +41,7 @@ erDiagram
         varchar      name
         enum         rule
         jsonb        metadata
-        compIdx      comp_key     UK "ns_id + value"
+        compIdx      comp_key     UK "ns_id + name"
     }
 
     AttributeDefinitionKeyAccessGrant {
