--- a/migrations/20240118000000_diagram.md
+++ b/migrations/20240118000000_diagram.md
@@ -82,7 +82,7 @@ erDiagram
     KeyAccessServer {
         uuid       id                PK
         varchar    key_access_server UK
-        varchar    public_key
+        jsonb      public_key
         jsonb      metadata
     }
 ```
