comprehensively rename table key_access_server column key_access_server to uri and update protos, db, sdk

--- a/migrations/20240131000000_diagram.md
+++ b/migrations/20240131000000_diagram.md
@@ -81,7 +81,7 @@ erDiagram
 
     KeyAccessServer {
         uuid       id                PK
-        varchar    key_access_server UK
+        varchar    uri               UK
         jsonb      public_key
         jsonb      metadata
     }
