add state to ERD and add new migration

--- a/migrations/20240212000000_diagram.md
+++ b/migrations/20240212000000_diagram.md
@@ -2,7 +2,7 @@
 
 ```mermaid
 ---
-title: Database Schema Mermaid Diagram 
+title: Database Schema Mermaid Diagram
 nodes: |
   Metadata is a jsonb type which will hold a common structure
 
@@ -33,6 +33,7 @@ erDiagram
     Namespace {
         uuid        id   PK
         varchar     name UK
+        enum        state
     }
 
     AttributeDefinition {
@@ -42,6 +43,7 @@ erDiagram
         enum         rule
         jsonb        metadata
         compIdx      comp_key     UK "ns_id + name"
+        enum         state
     }
 
     AttributeDefinitionKeyAccessGrant {
@@ -57,6 +59,7 @@ erDiagram
         uuid[]       members                 FK "Optional grouping of values"
         jsonb        metadata
         compIdx      comp_key                UK "ns_id + ad_id + value"
+        enum         state
     }
 
     AttributeValueKeyAccessGrant {
