change state enum to active bool column in schema migration/erd

--- a/migrations/20240212000000_schema_erd.md
+++ b/migrations/20240212000000_schema_erd.md
@@ -33,7 +33,7 @@ erDiagram
     Namespace {
         uuid        id   PK
         varchar     name UK
-        enum        state
+        bool        active
     }
 
     AttributeDefinition {
@@ -43,7 +43,7 @@ erDiagram
         enum         rule
         jsonb        metadata
         compIdx      comp_key     UK "ns_id + name"
-        enum         state
+        bool         active
     }
 
     AttributeDefinitionKeyAccessGrant {
@@ -59,7 +59,7 @@ erDiagram
         uuid[]       members                 FK "Optional grouping of values"
         jsonb        metadata
         compIdx      comp_key                UK "ns_id + ad_id + value"
-        enum         state
+        bool         active
     }
 
     AttributeValueKeyAccessGrant {
