add notes to latest ERD with subject mapping tree added to schema

--- a/migrations/20240227000000_schema_erd.md
+++ b/migrations/20240227000000_schema_erd.md
@@ -6,13 +6,19 @@ title: Database Schema Mermaid Diagram
 nodes: |
   This schema reflects the addition of tables forming a tree relationship under the SubjectMapping node.
 
-  As a policy administrator, I will be able to define a subject mapping to a specific attribute Value
-  corresponds to a SubjectMapping, permitting the actions TRANSMIT and DECRYPT to SubjectSets, where each
+  As a policy administrator, I will be able to define a SubjectMapping on a specific attribute Value
+  permitting the actions TRANSMIT and DECRYPT to one or more SubjectSets, where each
   SubjectSet comprises one or more ConditionGroups, and each ConditionGroup joins
   with a boolean operator AND or OR one or more Conditions. The Conditions are where
   Subject context fields and values (i.e. a `username` of `alice@example.org`) contained
   in an external source (most often an identity provider) actually drive a mapping
   all the way back up the tree to an internal Platform-known AttributeValue.
+
+  NOTE: a PDP should consider more than one SubjectSet on a SubjectMapping or more than one ConditionGroup
+  on a SubjectSet joined together by the boolean AND. For now, Conditions are the only place a policy platform
+  administrator has control over the boolean operator. If they need to OR together multiple ConditionGroups
+  in a SubjectSet, or multiple SubjectSets in a SubjectMapping, that can be accomplished with multiple
+  AttributeValues and an AttributeDefinition rule of ANY_OF associating them together.
 
 ---
 
