add updated schema proposal

--- a/migrations/20240228000000_schema_erd.md
+++ b/migrations/20240228000000_schema_erd.md
@@ -5,7 +5,7 @@
 title: Database Schema Mermaid Diagram
 nodes: |
   This schema reflects the addition of SubjectConditions, which map external fields and values, like those
-  provided in the context received about a user from an Identity Provider (idP) to an Attribute Value
+  provided in the context received about a subject/user from an Identity Provider (idP) to an Attribute Value
   by way of a SubjectMapping. An Attribute Value will relate to one or more SubjectMappings with an
   'AND' relationship, and a SubjectMapping will have one or more SubjectConditions with an 'AND' relationship. If an 'OR' boolean relationship is needed, the policy administrator is recommended to utilize
   the 'ANY_OF' Attribute Definition rule and multiple Attribute Values with their own individual
@@ -13,13 +13,13 @@ nodes: |
 
   Following this schema, a SubjectCondition for a company "division" of "engineering" or "product" could
   be reused across multiple SubjectMappings. On its own, that SubjectCondition would contextualize an
-  Attribute Value for "R & D". However, in a SubjectMapping combining it with a second
+  Attribute Value for something like "R & D". However, in a SubjectMapping including it with a second
   SubjectCondition containing the external_field_name "title" and the external_field_values "executive",
   they would contextualize the mapped Attribute Value as essentially "R & D Executives".
 
   If the intended ABAC behavior was instead "R&D" _OR_ "Executives", the implementation would be an Attribute
   Definition with the rule 'ANY_OF' containing two separate Attribute Values, where each had a distinct
-  SubjectMapping to the independent SubjectConditions. 
+  SubjectMapping to one or the other of the independent SubjectConditions.
 
   Note: a name is optionally provided as a column on SubjectConditions (and constrained to be unique
   when provided) so that SubjectConditions can be more easily reused across varying SubjectMappings
@@ -97,7 +97,7 @@ erDiagram
 
     SubjectConditions {
         uuid            id                              PK
-        varchar         name                    "optional, but Unique when provided"
+        varchar         name                    "optional, but unique if provided"
         jsonb           metadata
         varchar         external_field_name
         varchar[]       external_field_values
