--- a/migrations/20240227000000_schema_erd.md
+++ b/migrations/20240227000000_schema_erd.md
@@ -36,10 +36,10 @@ erDiagram
 
     ResourceMapping }o--o{ AttributeValue: relates
 
-    SubjectMapping }|--|{ AttributeValue: has
+    SubjectMapping }|--|| AttributeValue: has
     SubjectMapping }|--|{ SubjectSets: has
-    SubjectSets ||--|{ ConditionGroups: has
-    ConditionGroups ||--|{ Conditions: has
+    SubjectSets }|--|{ ConditionGroups: has
+    ConditionGroups }|--|{ Conditions: has
 
     Namespace {
         uuid        id   PK
