--- a/migrations/20240228000000_schema_erd.md
+++ b/migrations/20240228000000_schema_erd.md
@@ -25,13 +25,21 @@ nodes: |
   when provided) so that SubjectConditions can be more easily reused across varying SubjectMappings
   while allowing a policy administrator to query them by a slug instead of only a uuid.
 
+
+  Questions:
+    1. do we need AND/OR *outside of attribute definition ANY_OF/ALL_OF enum* for certain?
+    2. if we really need nested subject conditions, can we use recursive SQL and an implicit AND?
+    3. we have `active` status on attribute values, if an attribute value is deactivated, its subject mappings can live on. Do we also need `active` status on subject conditions, or is deletion just fine? 
+    4. does it have to be many to many from SubjectSets to ConditionGroups and ConditionGroups to Conditions?
+    5. where to ACTIONS really live? Tagging PDP is asking?
+
 ---
 
 erDiagram
 
     Namespace ||--|{ AttributeDefinition : has
-    AttributeDefinition ||--|{ AttributeValue : has
     AttributeDefinition ||--o{ AttributeDefinitionKeyAccessGrant : has
+    AttributeDefinition ||--|{ AttributeValue : has
 
     AttributeValue ||--o{ AttributeValue: "has group members"
     AttributeValue ||--o{ AttributeValueKeyAccessGrant: has
@@ -41,7 +49,7 @@ erDiagram
 
     ResourceMapping }o--o{ AttributeValue: relates
 
-    SubjectMapping }|--|{ AttributeValue: has
+    SubjectMapping }|--|| AttributeValue: has
     SubjectMapping }|--|{ SubjectConditions: has
 
     Namespace {
