--- a/migrations/20240228000000_schema_erd.md
+++ b/migrations/20240228000000_schema_erd.md
@@ -4,34 +4,42 @@
 ---
 title: Database Schema Mermaid Diagram
 nodes: |
-  This schema reflects the addition of SubjectConditions, which map external fields and values, like those
+  This schema reflects the addition of SubjectConditionSets, which map external fields and values, like those
   provided in the context received about a subject/user from an Identity Provider (idP) to an Attribute Value
   by way of a SubjectMapping. An Attribute Value will relate to one or more SubjectMappings with an
-  'AND' relationship, and a SubjectMapping will have one or more SubjectConditions with an 'AND' relationship. If an 'OR' boolean relationship is needed, the policy administrator is recommended to utilize
-  the 'ANY_OF' Attribute Definition rule and multiple Attribute Values with their own individual
-  SubjectMappings.
+  'AND' relationship, and a SubjectMapping will have one or more SubjectConditionSets with an 'AND' relationship.
+  If an 'OR' boolean relationship is needed, the policy administrator is recommended to utilize
+  the 'ANY_OF' Attribute Definition rule and multiple Attribute Values with their own individual SubjectMappings.
 
-  Following this schema, a SubjectCondition for a company "division" of "engineering" or "product" could
-  be reused across multiple SubjectMappings. On its own, that SubjectCondition would contextualize an
-  Attribute Value for something like "R & D". However, in a SubjectMapping including it with a second
-  SubjectCondition containing the external_field_name "title" and the external_field_values "executive",
-  they would contextualize the mapped Attribute Value as essentially "R & D Executives".
+  It is known that this relation of external idP-derived Subject context to ABAC attributes is a complex
+  undertaking, and 3rd party FOSS/SaaS tools exist purely for this purpose. Because of this, the platform
+  currently supports the relation of SubjectMappings -> SubjectSets -> ConditionGroups (AND/OR) -> Conditions
+  (IN / NOT IN) with limited boolean logic. As there is a high likelihood of a need to integrate this relation
+  with 3rd party tooling in the future, these internal tree structures will be stored in a SubjectConditionSet
+  table as JSONB marshaled from the protos. That will allow reuse of the entire structure across multiple
+  Attribute Values via SubjectMappings, but will enable flexibility to grammar and relation changes in the
+  future, essentially treating this structure as a v1.
 
-  If the intended ABAC behavior was instead "R&D" _OR_ "Executives", the implementation would be an Attribute
-  Definition with the rule 'ANY_OF' containing two separate Attribute Values, where each had a distinct
-  SubjectMapping to one or the other of the independent SubjectConditions.
+  As a policy administrator, I will be able to define a SubjectMapping on a specific attribute Value
+  (utilizing our proto Messages/fields for SubjectSets, ConditionGroups, and Conditions) to 
+  permit the actions TRANSMIT and DECRYPT to one or more SubjectSets, where each SubjectSet comprises
+  one or more ConditionGroups, and each ConditionGroup joins with a boolean operator AND or OR one
+  or more Conditions. The Conditions are where Subject context fields and values (i.e. a `username`
+  of `alice@example.org`) contained in an external source (most likely an idP or LDAP) actually drive a mapping
+  all the way back up the tree to an internal Platform-ABAC Attribute Value.
 
-  Note: a name is optionally provided as a column on SubjectConditions (and constrained to be unique
-  when provided) so that SubjectConditions can be more easily reused across varying SubjectMappings
-  while allowing a policy administrator to query them by a slug instead of only a uuid.
+  NOTE: a PDP should consider all of the following joined by an AND relationship:
+    * more than one SubjectMapping for an Attribute Value
+    * more than one SubjectSet in the JSONB of a SubjectConditionSet
+    * more than one ConditionGroup on a SubjectSet
+    
+    For now, ConditionGroups are the only place a policy platform administrator has control over the boolean
+    operator to associate Conditions via AND or OR. If an admin needs to OR together multiple ConditionGroups
+    in a SubjectSet, or multiple SubjectSets in a SubjectMapping, that can be accomplished with multiple
+    AttributeValues and an AttributeDefinition rule of ANY_OF associating them together.
 
-
-  Questions:
-    1. do we need AND/OR *outside of attribute definition ANY_OF/ALL_OF enum* for certain?
-    2. if we really need nested subject conditions, can we use recursive SQL and an implicit AND?
-    3. we have `active` status on attribute values, if an attribute value is deactivated, its subject mappings can live on. Do we also need `active` status on subject conditions, or is deletion just fine? 
-    4. does it have to be many to many from SubjectSets to ConditionGroups and ConditionGroups to Conditions?
-    5. where to ACTIONS really live? Tagging PDP is asking?
+  NOTE: due to the many-to-many relation between SubjectMappings and SubjectConditionSets, a pivot table will be
+    utilized and is abbreviated in the ERD.
 
 ---
 
@@ -50,7 +58,7 @@ erDiagram
     ResourceMapping }o--o{ AttributeValue: relates
 
     SubjectMapping }|--|| AttributeValue: has
-    SubjectMapping }|--|{ SubjectConditions: has
+    SubjectMapping }|--|{ SubjectConditionSet: "has by pivot table"
 
     Namespace {
         uuid        id   PK
@@ -98,19 +106,35 @@ erDiagram
     SubjectMapping {
         uuid           id                          PK
         uuid           attribute_value_id          FK
-        varchar[]      condition_ids
+        varchar[]      subject_mapping_condition_set_pivot_ids "pivot table (not pictured) constrains many-to-many relationship"
         varchar[]      actions
         jsonb          metadata
     }
 
-    SubjectConditions {
+    SubjectConditionSet {
         uuid            id                              PK
         varchar         name                    "optional, but unique if provided"
         jsonb           metadata
-        varchar         external_field_name
-        varchar[]       external_field_values
-        enum            operator                "IN | NOT_IN"
+        jsonb           condition                "marshaled proto SubjectSets -> ConditionGroups -> Conditions"
     }
+
+    SubjectMapping }|--|| AttributeValue: has
+    SubjectConditionSet ||--|{ SubjectSets: "marshals in condition column"
+    SubjectSets ||--|{ ConditionGroups: has
+    ConditionGroups ||--|{ Conditions: has
+
+    Conditions {
+        varchar         subject_external_field
+        varchar[]       subject_external_values
+        enum            operator "IN | NOT IN"
+    }
+
+    ConditionGroups {
+        enum            boolean_operator "AND | OR"
+    }
+
+    SubjectSets {}
+    
 
     KeyAccessServer {
         uuid       id                PK
